Sat Nov 15 20:14:05 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* accept_sec_context.c (krb5_gss_accept_sec_context): Return
 		GSS_S_FAILURE if a non-NULL context handle is passed to
 		it.

Thu Sep 18 17:55:09 1997  Tom Yu  <tlyu@mit.edu>

	* acquire_cred.c: Replace USE_STRING_H with something more sane.

	* import_name.c: Replace USE_STRING_H with something more sane.

Tue Jul 29 22:56:04 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* inq_names.c (krb5_gss_inquire_names_for_mech): Add the 
 		the new OID value for the host-based service name and 
 		the exported name OID to the list of OID's supported by
		this mechanism.
	
	* import_name.c (krb5_gss_import_name): Add support for the new
		OID value for the host-based service name.

Mon Jul 21 20:32:14 1997  Ezra Peisach  <epeisach@mit.edu>

	* accept_sec_context.c (krb5_gss_accept_sec_context): Initialize
		ctx before referenced in failure cases.

Tue Jul 15 22:05:21 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* init_sec_context.c (krb5_gss_init_sec_context): Always copy the
		mechtype so that delete_sec_context() can safely release
		the OID without smashing memory passed in by the application.

Mon Jun 30 14:05:51 1997  Kevin L Mitchell  <klmitch@mit.edu>

	* accept_sec_context.c: added code to return a valid delegated
		credential handle if credentials were delegated.  The
		GSS_C_DELEG_FLAG from the client is ignored, and the
		option is only set if the client actually delegated
		credentials.

Fri Jun  6 15:26:27 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* accept_sec_context.c (krb5_gss_accept_sec_context): Reorganized
 		error handling code to be more compact (and correct!).  If
 		an error occurs while we are doing mutual authentication,
 		send an KRB_ERROR message back to the client, so that it
 		knows what is going on.  (This is specified by RFC 1964;
 		we just weren't implementing this previously.)
           
	* delete_sec_context.c (krb5_gss_delete_sec_context): Check to